# mcp-hub

./: .gitignore  MCP_CONNECTIONS.md  MCP_OAUTH.md  OAUTH_USER_ISOLATION.md  README.md  REDIS_SETUP.md  db.sqlite3  pyproject.toml  requirements.txt  seed_categories.py  test_reasoning.py
app/: admin.py  agent.py  apps.py  assistant_schema.py  chat.py  copilotkit_integration.py  graphql.py  mcp_manager.py  model.py  models.py  schema.py  sdk.py  types.py  urls.py  views.py
app/agent/: README_PLAN_AND_EXECUTE.md  agent.py  chat.py  model.py  openai_reasoning_graph.py  plan_and_execute.py  plan_and_execute_with_reasoning.py  reasoning.py  types.py
app/auth/: __init__.py  google.py  middleware.py  models.py  schema.py  services.py  types.py
app/graphql/: permissions.py  schema.py
app/integrations/: copilotkit_integration.py  sdk.py
app/mcp/: README.md  adapter_builder.py  category_schema.py  constants.py  manager.py  mcp_schema.py  models.py  oauth_helper.py  oauth_storage.py  redis_manager.py  types.py  utils.py
app/migrations/: 0001_initial.py  0002_mcpserver_headers_json_mcpserver_query_params_json.py
assistant/: asgi.py  settings.py  urls.py
docs/: OPENAI_REASONING_GUIDE.md  REASONING_GUIDE.md  REASONING_IMPLEMENTATION_SUMMARY.md
scripts/: export_categories.py  export_mcp_servers.py  import_categories.py  import_mcp_servers.py  import_sqlitedata.py
